--- a/package.json
+++ b/package.json
@@ -2,37 +2,36 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "resolutions": {
         "prosemirror-model": "1.11.0"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.10.2",
-        "@fortawesome/fontawesome-svg-core": "^1.2.19",
-        "@fortawesome/free-solid-svg-icons": "^5.10.2",
-        "@fortawesome/vue-fontawesome": "^0.1.6",
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@fortawesome/fontawesome-svg-core": "^1.2.34",
+        "@fortawesome/free-solid-svg-icons": "^5.15.2",
+        "@fortawesome/vue-fontawesome": "^2.0.2",
         "cross-env": "^5.0.0",
-        "laravel-mix": "^5.0",
-        "laravel-nova": "^1.4.1",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.10",
-        "sass-loader": "^8.0.2"
+        "laravel-mix": "^6.0.11",
+        "laravel-nova": "^1.0",
+        "postcss": "^8.1",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.6",
+        "sass-loader": "8.*",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "i": "^0.3.6",
-        "npm": "^6.4.1",
-        "pretty": "^2.0.0",
-        "tiptap": "^1.27.1",
+        "tiptap": "^1.32.1",
         "tiptap-extension-subscript": "^0.1.0",
         "tiptap-extension-superscript": "^0.1.0",
-        "tiptap-extensions": "^1.29.1",
-        "vue": "^2.6.10",
-        "vue-template-compiler": "^2.6.10"
+        "tiptap-extensions": "^1.35.1",
+        "vue": "^2.5.0"
     }
 }
